--- a/map4/starter-template.css
+++ b/map4/starter-template.css
@@ -9,4 +9,6 @@ text-align: center;
 #map4 {
   height: 500px;
 }
-.theft{color:orange}
+.theft{color:orange};
+.homicide{color:red};
+.othercrimes{color:blue}
