--- a/map4/starter-template.css
+++ b/map4/starter-template.css
@@ -9,6 +9,6 @@ text-align: center;
 #map4 {
   height: 500px;
 }
-.theft{color:orange};
-.homicide{color:red};
-.other{color:blue};
+.theft{color:orange}
+.homicide{color:red}
+.other{color:blue}
